# raft_consensus_threading_implementation

./: .gitignore  meson.build  meson_options.txt
include/: client.h  server.h
raft_implementation/include/: client.h  functionality.h  server.h  utils.h
raft_implementation/src/: main.cpp
raft_implementation_doc/: README.md  main.bib  main.tex  setup.sh
raft_implementation_doc/sections/: Settings.tex  abstract.tex  acknowledgement.tex  declarationof.tex  introduction.tex  my_implementation.tex  sobjectizer_installation.tex  titlepage.tex  used_functions.tex
src/: main.cpp
